--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 <img src="avatar.jpg" width="200" alt="тут моя фотка"/>
         </td>
         <td>
-<h1>Александр Харовюк</h1>
+<h1>Александр Андреевич  Харовюк</h1>
     <p><em>Я учуть кодить по <strong>Youtube</strong> урокам</em></p>
     <p>Я люблю путишествовать, заниматься спортом и программировать</p>
         </td>
     </tr>
 </table>
-
-    
 
 
     <hr>
